[gd_scene load_steps=17 format=4]

[ext_resource type="Script" path="res://engine/scripts/classes/level_cutscene/level_cutscene.gd" id="1"]
[ext_resource type="Script" path="res://stages/world_4/scripts/end_cutscene.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://cfl32xhp20q7x" path="res://gfx/misc/castle_big.png" id="3"]
[ext_resource type="PackedScene" uid="uid://1do11cr84k7y" path="res://engine/objects/players/player.tscn" id="4"]
[ext_resource type="Script" path="res://objects/player_camera_custom/player_camera_custom.gd" id="5"]
[ext_resource type="PackedScene" uid="uid://yqftjpfskche" path="res://engine/components/cam_area/cam_area.tscn" id="6"]
[ext_resource type="TileSet" uid="uid://dtvs1rult8kbe" path="res://tilesets/overworld_green/overworld_green.tres" id="7"]
[ext_resource type="PackedScene" uid="uid://ugxjxrdao5el" path="res://engine/components/hud/hud.tscn" id="8"]
[ext_resource type="Script" path="res://engine/scripts/nodes/effects/quality_visible.gd" id="9"]
[ext_resource type="Texture2D" uid="uid://6bwpp568bmq0" path="res://gfx/fancy_graphics/giant_clouds.png" id="10"]
[ext_resource type="Texture2D" uid="uid://ctevqve3rw01o" path="res://gfx/fancy_graphics/sun.png" id="11"]
[ext_resource type="Texture2D" uid="uid://b8vlsfordroc6" path="res://gfx/wind_eff.png" id="12"]
[ext_resource type="AudioStream" uid="uid://btujdg8c8vnxn" path="res://sfx/wind.ogg" id="13"]
[ext_resource type="Script" path="res://objects/chorniy_mario/chorniy_cutscene_spawner.gd" id="14"]

[sub_resource type="Gradient" id="Gradient_slprf"]
colors = PackedColorArray(0.2313729971647263, 0.482353001832962, 0.6392160058021545, 1, 0.9490200281143188, 0.992156982421875, 0.9882349967956543, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_0e3oq"]
gradient = SubResource("Gradient_slprf")
width = 480

[node name="CaveCutscene" type="Node2D"]
script = ExtResource("1")
goto_path = "res://stages/world_4/map_4_complete.tscn"
fade_out_time = 0.02

[node name="CutsceneLogic" type="Node" parent="."]
script = ExtResource("2")

[node name="Castle" type="Sprite2D" parent="."]
position = Vector2(173, 240)
texture = ExtResource("3")

[node name="Mario" parent="." instance=ExtResource("4")]
modulate = Color(1, 1, 1, 0)
position = Vector2(173, 400)

[node name="PlayerCamera2D" type="Camera2D" parent="."]
limit_left = 0
limit_top = 0
limit_bottom = 480
script = ExtResource("5")

[node name="CamArea" parent="." instance=ExtResource("6")]
offset_right = 640.0
offset_bottom = 480.0
metadata/_edit_lock_ = true

[node name="TileMap" type="TileMap" parent="."]
z_index = 4
tile_set = ExtResource("7")
format = 2
layer_0/tile_data = PackedInt32Array(983059, 65536, 1, 917523, 65536, 1, 851987, 65536, 0, 983058, 65536, 1, 917522, 65536, 1, 851986, 65536, 0, 983057, 65536, 1, 917521, 65536, 1, 851985, 65536, 0, 983056, 65536, 1, 917520, 65536, 1, 851984, 65536, 0, 983055, 65536, 1, 917519, 65536, 1, 851983, 65536, 0, 983054, 65536, 1, 917518, 65536, 1, 851982, 65536, 0, 983053, 65536, 1, 917517, 65536, 1, 851981, 65536, 0, 983052, 65536, 1, 917516, 65536, 1, 851980, 65536, 0, 983051, 65536, 1, 917515, 65536, 1, 851979, 65536, 0, 983050, 65536, 1, 917514, 65536, 1, 851978, 65536, 0, 983049, 65536, 1, 917513, 65536, 1, 851977, 65536, 0, 983048, 65536, 1, 917512, 65536, 1, 851976, 65536, 0, 983047, 65536, 1, 917511, 65536, 1, 851975, 65536, 0, 983046, 65536, 1, 917510, 65536, 1, 851974, 65536, 0, 983045, 65536, 1, 917509, 65536, 1, 983044, 65536, 1, 917508, 65536, 1, 851972, 65536, 0, 983043, 65536, 1, 917507, 65536, 1, 851971, 65536, 0, 983042, 65536, 1, 917506, 65536, 1, 851970, 65536, 0, 983041, 65536, 1, 917505, 65536, 1, 851969, 65536, 0, 983040, 65536, 1, 917504, 65536, 1, 851968, 65536, 0, 1048575, 0, 1, 983039, 0, 1, 917503, 0, 0, 851988, 65536, 0, 917524, 65536, 1, 983060, 65536, 1, 1114111, 0, 2, 1048576, 65536, 2, 1048577, 65536, 2, 1048578, 65536, 2, 1048579, 65536, 2, 1048580, 65536, 2, 1048581, 65536, 2, 1048582, 65536, 2, 1048583, 65536, 2, 1048584, 65536, 2, 1048585, 65536, 2, 1048586, 65536, 2, 1048587, 65536, 2, 1048588, 65536, 2, 1048589, 65536, 2, 1048590, 65536, 2, 1048591, 65536, 2, 1048592, 65536, 2, 1048593, 65536, 2, 1048594, 65536, 2, 1048595, 65536, 2, 1048596, 65536, 2, 851973, 65536, 0, 786452, 2, 458752, 786451, 2, 458752, 786450, 2, 458752, 786449, 2, 458752, 131083, 2, 131072, 786443, 2, 327680, 786445, 2, 65536, 786447, 2, 196608, 65536, 2, 131072, 458769, 2, 131072, 65554, 2, 131072, 327684, 2, 131072, 1048597, 131072, 2, 983061, 131072, 1, 917525, 131072, 1, 851989, 131072, 0, 786454, 196608, 2, 720918, 196608, 1, 655382, 196608, 1, 589846, 196608, 1, 524310, 196608, 0)
layer_1/name = "Layer1"

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground"]
position = Vector2(640, 0)
rotation = 1.570799946784973
scale = Vector2(1, 640)
texture = SubResource("GradientTexture1D_0e3oq")
centered = false
metadata/_edit_lock_ = true

[node name="HUD" parent="." instance=ExtResource("8")]
visible = false

[node name="CastleEndMarker" type="Marker2D" parent="."]
position = Vector2(173, 416)

[node name="Node2D" type="Node2D" parent="."]
z_index = -20
script = ExtResource("9")

[node name="GiantClouds3" type="Sprite2D" parent="Node2D"]
modulate = Color(1, 1, 1, 0.7137259840965271)
position = Vector2(96, 240)
texture = ExtResource("10")

[node name="ParallaxBackground2" type="ParallaxBackground" parent="."]
layer = 100

[node name="PlushySun" type="Sprite2D" parent="ParallaxBackground2"]
position = Vector2(848, 112)
texture = ExtResource("11")
script = ExtResource("9")

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground2"]
motion_mirroring = Vector2(1280, 0)

[node name="WindEff" type="Sprite2D" parent="ParallaxBackground2/ParallaxLayer"]
modulate = Color(1, 1, 1, 0)
position = Vector2(640, 240)
texture = ExtResource("12")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13")
bus = &"Sound"

[node name="ChorniyCutsceneSpawner" type="Node" parent="."]
script = ExtResource("14")
